--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   </tr>
   <% @users.each do |user| %>
     <tr>
-      <td><% user.name %></td>
+      <td><%= user.name %></td>
     </tr>
   <% end %>
 </table>
